# ChangeLog for sys-apps/portage
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Id$

*portage-2.2.00.15123 (20 Dec 2009)

  20 Dec 2009; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.15118.ebuild, +portage-2.2.00.15123.ebuild:
  Replace latest snapshot, it doesn't properly set the full path during
  merges.

*portage-2.2.00.15118 (18 Dec 2009)

  18 Dec 2009; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.14896.ebuild, +portage-2.2.00.15118.ebuild:
  Bump, resembles version 2.2_rc60

*portage-2.2.00.15027 (10 Dec 2009)

  10 Dec 2009; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.14994.ebuild, +portage-2.2.00.15027.ebuild:
  Replace faulty snapshot (SRC_URI fetch weirdness) with version which
  resembles 2.2_rc58+

*portage-2.2.00.14994 (09 Dec 2009)

  09 Dec 2009; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.14813.ebuild, +portage-2.2.00.14994.ebuild:
  Version bump, one step closer to the same behaviour as trunk with
  EPREFIX=''

  07 Dec 2009; Fabian Groffen <grobian@gentoo.org>
  -files/portage-2.2.00.14487-brokentty-more-platforms.patch,
  -files/portage-2.2.00.14487-prefix-chaining.patch,
  -files/portage-2.2.00.14555-prefix-chaining.patch:
  Drop stale patches

*portage-2.2.00.14964 (07 Dec 2009)

  07 Dec 2009; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.14555.ebuild, -portage-2.2.00.14771.ebuild,
  +portage-2.2.00.14964.ebuild:
  Bump, this version resembles 2.2_rc56

*portage-2.2.00.14896 (26 Nov 2009)

  26 Nov 2009; Fabian Groffen <grobian@gentoo.org>
  +portage-2.2.00.14896.ebuild:
  New revision, this one is equal to portage-2.2_rc52 feature wise.

*portage-2.2.00.14813 (13 Nov 2009)

  13 Nov 2009; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.14487.ebuild, +portage-2.2.00.14813.ebuild:
  Bump, restore bash-3 compatability, no longer provide ld.so.conf file for
  offset installs

*portage-2.2.00.14771 (01 Nov 2009)

  01 Nov 2009; Fabian Groffen <grobian@gentoo.org>