@@ -2,6 +2,13 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*portage-2.2.00.15134 (22 Dec 2009)
+
+  22 Dec 2009; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.14964.ebuild, +portage-2.2.00.15134.ebuild:
+  Bump, brings back the binpkg functionality of Prefix Portage that got
+  broken somehow.
+
 *portage-2.2.00.15123 (20 Dec 2009)
 
   20 Dec 2009; Fabian Groffen <grobian@gentoo.org>
